fix overlay on small screens

--- a/src/components/Overlay/Overlay.scss
+++ b/src/components/Overlay/Overlay.scss
@@ -12,8 +12,14 @@
   flex-direction: column;
   overflow: hidden;
 
+  &__image {
+    width: 100%;
+    height: auto;
+  }
+
   &__text {
     font-size: 24px;
     font-weight: 600;
+    padding: 0 16px;
   }
 }
